2012-03-04 Borut Razem <borut.razem AT gmail.com>

	* doc/README.txt, doc/sdccman.lyx: small corrections
	* src/SDCC.lex: removed forward declaration of non existing
	  function deprecated_keyword(), removed macro TKEYWORDSDCC
	* support/cpp/opts.c, support/cpp/sdcpp.c,
	  support/cpp/version.c, support/cpp/version.h:
	  updated version to 4.6.3

2012-03-04 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.h,
	* src/SDCCerr.c,
	* src/SDCCerr.h,
	* src/SDCC.y: fix struct/union tag scope problems
	  (including bug #3487670)
	* support/regression/tests/structscope.c: new tests

2012-03-03 Borut Razem <borut.razem AT gmail.com>

	* support/regression/ports/ucz80/spec.mk,
	  support/regression/ports/ucz180/spec.mk:
	  simulation timeout doubled due to several tests
	  failures on sparc64-unknown-netbsd platform

2012-03-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc.c,
	  support/regression/tests/bug-3495411.c,
	  Fixed #3495411 and another --oldralloc bug.

2012-03-02 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx: fixed pdf generation;
	  added chapter 1.2 SDCC Suite Licenses;
	  libraries license should be at least as liberal as the GPLv2+LE;
	  note about GPL incompatible pic device libraries;
	  added link to "List of the SDCC library" wiki page;
	  added link to "SDCC - Small Device C Compiler Wiki" wiki page;
	  use term "SDCC suite";
	  formatting cleaning
	* doc/README.txt: changed chapters Licenses and Authors and interested persons

2012-03-01 Borut Razem <borut.razem AT gmail.com>

	* support/regression/ports/ucz80/spec.mk:
	  simulation timeout increased to 20s due to several tests
	  failures on sparc64-unknown-netbsd platform
	* configure.in, configure: report CPPFLAGS and LDFLAGS settings
	* support/sdbinutils/bfd/configure.in,
	  support/sdbinutils/bfd/configure,
	  PKGVERSION set to (sdbinutils derived from GNU Binutils),